--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   font-size: 100%;
   font-family: 'Overpass', sans-serif;
   overflow: hidden;
-  /* width: 100%;
-  min-height: 100vh; */
+  width: 100%;
+  min-height: 100vh;
 }
 
 div {
